# this-wine-does-not-exist

./: .gitignore  1_create_labels_dataset.ipynb  1_scrape_data-Copy1.ipynb  1_scrape_data.ipynb  1_scrape_data_v2.ipynb  1_scrape_labels.ipynb  2_build_datasets.ipynb  2_clean_data.ipynb  2a_clean_dataset.ipynb  2b_build_gpt2_dataset.ipynb  2c_build_master_dataset.ipynb  3_build_datasets.ipynb  3_model_names.ipynb  4_char_model_DESCS.ipynb  4_char_model_DESCS_v1.ipynb  4_char_model_DESCS_v2.ipynb  4_char_model_NAMES.ipynb  4_model_descriptions-V2.ipynb  4_model_descriptions.ipynb  4_model_descriptions_v2.ipynb  4_model_price.ipynb  4_train_model-box_train.ipynb  4_train_model.ipynb  4a_finetune_gpt2-distil_descriptions.ipynb  4a_finetune_gpt2-xl_descriptions.ipynb  4a_finetune_gpt2_Trainer.ipynb  4a_finetune_gpt2_descriptions.ipynb  4a_finetune_gpt2_script.ipynb  4b_char_model.ipynb  4b_generate_descriptions.ipynb  5_model_prices.ipynb  CONTRIBUTING.md  DATASET.md  DATA_CLASSIFICATION.md  README.md  TRAINING_GUIDE.md  Untitled.ipynb  context_scrape.ipynb  create_webdataset_shards.py  ferment_wine.py  (+12 more)
.ipynb_checkpoints/: 2_clean_data-checkpoint.ipynb  3_build_datasets-checkpoint.ipynb  4_char_model_DESCS-checkpoint.ipynb  4_char_model_DESCS_v1-checkpoint.ipynb  4_char_model_DESCS_v2-checkpoint.ipynb  4_char_model_NAMES-checkpoint.ipynb  4_model_price-checkpoint.ipynb  4b_char_model-checkpoint.ipynb  Untitled-checkpoint.ipynb
Graph/: events.out.tfevents.1552347544.DESKTOP-IMVU57F  events.out.tfevents.1554739973.DESKTOP-IMVU57F  events.out.tfevents.1554740227.DESKTOP-IMVU57F  (+9 more)
(+162 files in other folders)
