[project]
name = "wine-ai-dataset"
version = "1.0.0"
description = "Wine image+text dataset with modern AI tooling"
readme = "README.md"
authors = [{name = "David Rose", email = "david@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=14.0.0",
  "torch>=2.1.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "accelerate>=0.24.0",
  "peft>=0.11.0",
  "pillow>=10.0.0",
  "opencv-python>=4.8.0",
  "wandb>=0.16.0",
  "hydra-core>=1.3.0",
  "lightning>=2.1.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "scikit-learn>=1.3.0",
  "pydantic>=2.5.0",
  "hf-transfer>=0.1.9",
  "pytest>=7.4.0",
  "pytest-cov>=5.0.0",
  "black>=23.9.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "ipykernel>=6.30.1",
  "matplotlib>=3.10.6",
  "seaborn>=0.13.2",
]

[project.scripts]
wine-train = "wine_ai.training.cli:main"
wine-generate = "wine_ai.inference.cli:main"
wine-validate = "wine_ai.cli:validate_main"
wine-migrate = "wine_ai.cli:migrate_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wine_ai"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
